--- a/FitnessTrackingBE/package.json
+++ b/FitnessTrackingBE/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.21",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.5",
@@ -22,8 +24,9 @@
     "@apollo/server": "^4.10.4",
     "@prisma/client": "^5.15.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.2",
