--- a/FitnessTrackingBE/package.json
+++ b/FitnessTrackingBE/package.json
@@ -24,9 +24,13 @@
     "@apollo/server": "^4.10.4",
     "@prisma/client": "^5.15.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.2",
